--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,22 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
         "symfony/orm-pack": "^1.1",
+        "symfony/security-bundle": "5.1.*",
+        "symfony/twig-pack": "^1.0",
+        "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.19"
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "symfony/maker-bundle": "^1.19",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
